--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,10 +37,8 @@ jobs:
           profile: minimal
           toolchain: stable
           target: x86_64-unknown-linux-gnu
-      - run: |
-          mkdir -p target/man
-          cargo run --features gen-man-pages -- target/man
-          gzip -9 target/man/*.1
+      #- run: |
+      #    gzip -9 target/assets/man/*.1
       - uses: taiki-e/install-action@v2
         with:
           tool: cargo-deb
