--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,11 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-      - run: cargo build --verbose
+      - uses: actions/checkout@v6
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-hack
+      - run: cargo hack build --feature-powerset --include-features default,generate-extras --verbose
 
   test:
     runs-on: ubuntu-latest
@@ -24,6 +28,7 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
+      - run: cargo test --bins --features generate-extras --verbose
       - run: ./test-all --verbose -- --test-threads 1 --skip ping
 
   clippy:
@@ -35,7 +40,7 @@ jobs:
           profile: minimal
           toolchain: stable
           components: clippy
-      - run: cargo clippy --all-targets -- -D warnings
+      - run: cargo clippy --all-targets --features generate-extras -- -D warnings
 
   fmt:
     runs-on: ubuntu-latest
